--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,251 @@
-.App {
-  text-align: center;
+.app{
+    height: 100vh;
+    display: flex;
+    background-color: #020230;
+    color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+    width: 75%;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), #020230), 
+    url("./assests/bg.png") center;
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pyramid{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.moneyList {
+    list-style-type: none;
+    width: 100%;
+    padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.moneyListItem{
+    display: flex;
+    align-items: center;
+    padding: 7px;
+    border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.moneyListItem.active{
+    background-color: teal;
+}
+
+.moneyListItemNumber{
+    font-size: 20px;
+    font-weight: 100;
+    width: 10%;
+}
+
+.moneyListItemAmount{
+    width: 100%;
+    font-size: 20px;
+    font-weight: 300;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.top{
+    height: 50%;
+    position: relative;
+}
+
+.timer{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 1px;
+    left: 500px;
+}
+
+.bottom{
+    height: 50%;
+}
+
+.quiz{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.question {
+    width: 80%;
+    background: linear-gradient(#100241, #000);
+    border: 1px solid #fff;
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    font-size: 20px;
+}
+
+.answers{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.answer{
+    width: 38%;
+    padding: 15px;
+    text-align: center;
+    background: linear-gradient(#0e0124, #22074d);
+    border: 1px solid #fff;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0 10px 20px 5px;
+    cursor: pointer;
+}
+
+.answer:hover, 
+.answer.active{
+    background: mediumblue;
+}
+
+.answer.correct{
+    animation: correct 3s ease forwards;
+}
+
+@keyframes correct {
+    0%,
+    22%,
+    42%{
+        background: mediumblue;
+    }
+    20%,
+    40%,
+    60%{
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    60%,
+    100%{
+        background: rgb(0, 212, 0);
+    }
+}
+ 
+.answer.wrong{
+    animation: wrong 3s ease forwards;
+}
+
+@keyframes wrong {
+    0%,
+    22%,
+    42%{
+        background: mediumblue;
+    }
+    20%,
+    40%,
+    60%{
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    60%,
+    100%{
+        background: crimson;
+    }
+}
+
+.endText {
+    position: reletive;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background: rgb(0, 110, 255);
+    padding: 15px;
+    color: #000;
+    border: 2px solid #fff;
+    border-radius: 15px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    justify-content: space-around;
+}
+
+.heading{
+    font-size: 60px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    background: linear-gradient(#0e0124, #22074d, #0e0124);
+    align-items: center;
+    width: 40rem;
+}
+
+.start{
+    width: 250px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+}
+
+.startInput{
+    height: 50px;
+    width: 120%;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
+    outline: none;
+}
+
+.startInput-focus{
+    outline: none;
+}
+
+.startButton {
+    width: 70%;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
+    background: black;
+    color: white;
+}
+
+.startButton:hover{
+    background: #22074d;
+    color: #fff;
+}
+
+.startButton:focus{
+    background: green;
+    color: #fff;
+}
+
+.logo{
+    width: 250px;
+    height: 250px;
+    display: flex;
+    margin-left: 12rem;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: -40px;
 }
